--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # This step installs Deno, which is a new Javascript runtime that improves on Node. Can be used for an optional postprocessing step
-      - name: Setup deno
-        uses: denoland/setup-deno@main
-        with:
-          deno-version: v1.x
+      #- name: Setup deno
+        #uses: denoland/setup-deno@main
+        #with:
+          #deno-version: v1.x
       # Check out the repository so it can read the files inside of it and do other operations
       - name: Check out repo
         uses: actions/checkout@v2
