--- a/.github/workflows/flat.yml
+++ b/.github/workflows/flat.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
       # The Flat Action step. We fetch the data in the http_url and save it as downloaded_filename
-      - name: Fetch data
-        uses: githubocto/flat@v3
+      - name: Flat Data
+        uses: githubocto/flat@v3.2.0
         with:
           http_url: api.openweathermap.org/data/2.5/weather?q=Washington,DC,US&appid=a14a2a211c13e4d6d0e7248ba6b2fed3
  # THE URL YOU WISH TO FETCH GOES HERE
