--- a/.github/workflows/flat2.yml
+++ b/.github/workflows/flat2.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v2
     - name: Fetch latest data
       run: |-
-        curl https://api.openweathermap.org/data/2.5/weather?q=Washington,DC,US&appid=a14a2a211c13e4d6d0e7248ba6b2fed3 | jq . > weather.json
+        curl "https://api.openweathermap.org/data/2.5/weather?q=Washington,DC,US&appid=a14a2a211c13e4d6d0e7248ba6b2fed3" | jq . > weather.json
     - name: Commit and push if it changed
       run: |-
         git config user.name "Automated"
